--- a/test/integrationTests/integrationTests.csproj
+++ b/test/integrationTests/integrationTests.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Grpc.AspNetCore" Version="2.57.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+    <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
     <PackageReference Include="xunit" Version="2.5.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
