--- a/test/integrationTests/integrationTests.csproj
+++ b/test/integrationTests/integrationTests.csproj
@@ -21,9 +21,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="JunitXml.TestLogger" Version="3.1.12" />
   </ItemGroup>
  <ItemGroup>
-    <Protobuf Include="/workspaces/hostsvc-position/src/Protos/Position.proto" GrpcServices="Client" Access="Public" ProtoCompile="True" CompileOutputs="True" ProtoRoot="/workspaces/hostsvc-position/src/Protos" AdditionalImportDirs="/workspaces/hostsvc-position/spacedev_cache/protos/" OutputDir="obj/Debug/net6.0/"></Protobuf>
+    <Protobuf Include="/var/spacedev/protos/spacefx/position/Position.proto" GrpcServices="Client" Access="Public" ProtoCompile="True" CompileOutputs="True" ProtoRoot="/var/spacedev/protos" OutputDir="obj/Debug/net6.0/"></Protobuf>
   </ItemGroup>
 </Project>
