--- a/.github/workflows/hostsvc-position-build-publish.yaml
+++ b/.github/workflows/hostsvc-position-build-publish.yaml
@@ -17,6 +17,8 @@ jobs:
       APP_PROJECT: ./src/hostsvc-position.csproj
       NUGET_PROJECT: ./src_pluginBase/pluginBase.csproj
       OUTPUT_DIR: /var/spacedev/tmp/hostsvc-position
+      NUGET_STAGING_DIRECTORY: /var/spacedev/nuget/position
+      NUGET_FILE_PREFIX: Microsoft.Azure.SpaceSDK.HostServices.Position.Plugins
       ANNOTATION: azure-orbital-space-sdk-hostsvc-position.yaml
       WORKFLOW_AGENT: ubuntu-latest
       ARCHITECTURE: amd64
@@ -38,7 +40,7 @@ jobs:
       NUGET_STAGING_DIRECTORY: /var/spacedev/nuget/position
       NUGET_FILE_PREFIX: Microsoft.Azure.SpaceSDK.HostServices.Position.Plugins
       ANNOTATION: azure-orbital-space-sdk-hostsvc-position.yaml
-      WORKFLOW_AGENT: ubuntu-latest
+      WORKFLOW_AGENT: spacesdk-ubuntu-2204LTS-arm64
       ARCHITECTURE: arm64
     secrets:
       GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
