--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -15,13 +15,13 @@ jobs:
       checks: write
       pull-requests: write
 
-    uses: microsoft/azure-orbital-space-sdk-github-actions/composite-actions/test-app@al/test-app
-    with:
-      app_name: hostsvc-position
-    secrets:
-      GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
-      GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
-      SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
+    - uses: microsoft/azure-orbital-space-sdk-github-actions/composite-actions/test-app@al/test-app
+      with:
+        app_name: hostsvc-position
+      secrets:
+        GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
+        GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
+        SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
 
   # test-hostsvc-position-arm64:
   #   runs-on: spacesdk-ubuntu-2204LTS-arm64
