--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -4,39 +4,38 @@ on:
     push:
     workflow_dispatch:
     pull_request:
-      branches: [ main ]
+      branches: [ main ]spacesdk-ubuntu-2204LTS-arm64
 
 jobs:
-  test-hostsvc-position-amd64:
-    runs-on: ubuntu-latest
+ test-hostsvc-position-amd64:
     permissions:
       contents: read
       issues: read
       checks: write
       pull-requests: write
 
-    steps:
-      - uses: microsoft/azure-orbital-space-sdk-github-actions/composite-actions/test-app@al/test-app
-        with:
-          app_name: hostsvc-position
-        secrets:
-          GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
-          GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
-          SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yml@al/test-app
+    with:
+      APP_NAME: hostsvc-position
+      WORKFLOW_AGENT: ubuntu-latest
+    secrets:
+      GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
+      GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
+      SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
+      
 
   # test-hostsvc-position-arm64:
-  #   runs-on: spacesdk-ubuntu-2204LTS-arm64
   #   permissions:
   #     contents: read
   #     issues: read
   #     checks: write
   #     pull-requests: write
 
-  #   steps:
-  #     - uses: microsoft/azure-orbital-space-sdk-github-actions/composite-actions/test-app@al/test-app
-  #       with:
-  #         app_name: hostsvc-position
-  #       secrets:
-  #         GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
-  #         GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
-  #         SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
+  #   uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yml@al/test-app
+  #   with:
+  #     APP_NAME: hostsvc-position
+  #     WORKFLOW_AGENT: spacesdk-ubuntu-2204LTS-arm64
+  #   secrets:
+  #     GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
+  #     GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
+  #     SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
