--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -4,7 +4,7 @@ on:
     push:
     workflow_dispatch:
     pull_request:
-      branches: [ main ]spacesdk-ubuntu-2204LTS-arm64
+      branches: [ main ]
 
 jobs:
  test-hostsvc-position-amd64:
