--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -14,7 +14,7 @@ jobs:
       checks: write
       pull-requests: write
 
-    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yml@al/test-app
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@al/test-app
     with:
       APP_NAME: hostsvc-position
       WORKFLOW_AGENT: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
   #     checks: write
   #     pull-requests: write
 
-  #   uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yml@al/test-app
+  #   uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@al/test-app
   #   with:
   #     APP_NAME: hostsvc-position
   #     WORKFLOW_AGENT: spacesdk-ubuntu-2204LTS-arm64
