--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -2,6 +2,7 @@ name: test-hostsvc-position
 
 on: 
     push:
+    workflow_call:
     workflow_dispatch:
     pull_request:
       branches: [ main ]
