--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -1,8 +1,6 @@
 name: test-hostsvc-position
 
-on: 
-    push:
-    workflow_call:
+on:
     workflow_dispatch:
     pull_request:
       branches: [ main ]
@@ -15,7 +13,7 @@ jobs:
       checks: write
       pull-requests: write
 
-    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@al/test-app
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@main
     with:
       APP_NAME: hostsvc-position
       WORKFLOW_AGENT: ubuntu-latest
@@ -32,7 +30,7 @@ jobs:
   #     checks: write
   #     pull-requests: write
 
-  #   uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@al/test-app
+  #   uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@main
   #   with:
   #     APP_NAME: hostsvc-position
   #     WORKFLOW_AGENT: spacesdk-ubuntu-2204LTS-arm64
