--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -6,7 +6,7 @@ on:
       branches: [ main ]
 
 jobs:
- test-hostsvc-position-amd64:
+  test-hostsvc-position-amd64:
     permissions:
       contents: read
       issues: read
@@ -21,20 +21,19 @@ jobs:
       GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
       GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
       SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
-      
 
-  # test-hostsvc-position-arm64:
-  #   permissions:
-  #     contents: read
-  #     issues: read
-  #     checks: write
-  #     pull-requests: write
+  test-hostsvc-position-arm64:
+    permissions:
+      contents: read
+      issues: read
+      checks: write
+      pull-requests: write
 
-  #   uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@main
-  #   with:
-  #     APP_NAME: hostsvc-position
-  #     WORKFLOW_AGENT: spacesdk-ubuntu-2204LTS-arm64
-  #   secrets:
-  #     GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
-  #     GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
-  #     SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@main
+    with:
+      APP_NAME: hostsvc-position
+      WORKFLOW_AGENT: spacesdk-ubuntu-2204LTS-arm64
+    secrets:
+      GIT_HUB_USER_NAME: ${{ secrets.GIT_HUB_USER_NAME }}
+      GIT_HUB_USER_TOKEN: ${{ secrets.GIT_HUB_USER_TOKEN }}
+      SETUP_REPO_URL: ${{ secrets.SETUP_REPO_URL }}
