--- a/.github/workflows/hostsvc-position-build-publish.yaml
+++ b/.github/workflows/hostsvc-position-build-publish.yaml
@@ -5,6 +5,8 @@ on:
     push:
         branches:
         - main
+        - '[0-9]*.[0-9]*.[0-9]*-nightly'
+        
 
 jobs:
   build-hostsvc-position-amd64:
@@ -12,7 +14,7 @@ jobs:
       contents: read
       packages: write
 
-    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/service-build.yml@main
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/service-build.yml@0.11.0-nightly
     with:
       APP_PROJECT: ./src/hostsvc-position.csproj
       NUGET_PROJECT: ./src_pluginBase/pluginBase.csproj
@@ -32,7 +34,7 @@ jobs:
       contents: read
       packages: write
 
-    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/service-build.yml@main
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/service-build.yml@0.11.0-nightly
     with:
       APP_PROJECT: ./src/hostsvc-position.csproj
       NUGET_PROJECT: ./src_pluginBase/pluginBase.csproj
