--- a/.github/workflows/hotsvc-position-test.yaml
+++ b/.github/workflows/hotsvc-position-test.yaml
@@ -3,8 +3,9 @@ name: test-hostsvc-position
 on:
     workflow_dispatch:
     pull_request:
-      branches: [ main ]
-
+      branches:
+        - main
+        - '[0-9]*.[0-9]*.[0-9]*-nightly'
 jobs:
   test-hostsvc-position-amd64:
     permissions:
@@ -13,7 +14,7 @@ jobs:
       checks: write
       pull-requests: write
 
-    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@main
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@0.11.0-nightly
     with:
       APP_NAME: hostsvc-position
       WORKFLOW_AGENT: ubuntu-latest
@@ -29,7 +30,7 @@ jobs:
       checks: write
       pull-requests: write
 
-    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@main
+    uses: microsoft/azure-orbital-space-sdk-github-actions/.github/workflows/test-app.yaml@0.11.0-nightly
     with:
       APP_NAME: hostsvc-position
       WORKFLOW_AGENT: spacesdk-ubuntu-2204LTS-arm64
